# HIMS

./: .gitignore  CMakeLists.txt  README.md  hims_db_model.mwb  hims_db_model.mwb.bak
configuration/: config.json
sql/: patient_db_init.sql
src/: App.cpp  AppComponent.h  DatabaseComponent.h  ErrorHandler.cpp  ErrorHandler.h  ServiceComponent.h  SwaggerComponent.h  readme.md
src/controller/: PatientController.h  StaticController.h
src/db/: EthnicDB.h  MedicationDB.h  PatientDB.h
src/dtos/: ConfigDTO.h  PageDTO.h  PatientDTO.h  PatientInformationDTO.h  ResultDTO.h  StatusDTO.h
src/dtos/static/: EthnicDTO.h
src/service/: PatientService.cpp  PatientService.h
src/util/: computeAge.h  empty.cpp  randSalt.h  urlDecode.h
tests/: readme.md  test_oatpp.cpp
web/HIMS-Web/: README.md  package-lock.json  package.json
web/HIMS-Web/src/: App.vue  main.ts  naive.ts
web/HIMS-Web/src/axios/: request.ts
web/HIMS-Web/src/components/: Provider.vue  index.ts
web/HIMS-Web/src/router/: index.ts
web/HIMS-Web/src/views/: Login.vue  PatientRegister.vue
